--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
+
+
 {
-  "name": "yes",
+  "name": "quizapi",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "Quiz API backend service",
   "dependencies": {
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
